--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="heading">
     
-      <p class="descripition">
+      <p class="description">
         Clipboard allows you to track and organize everything you 
   copy. Instantly access your clipboard on all your devices.
       </p>
