--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <section class="container">
     <header>
-      <svg width="125" height="125" xmlns="http://www.w3.org/2000/svg"><g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd"><circle cx="62.5" cy="62.5" r="57.5"/><path d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0" stroke-linecap="round"/></g></svg>
-      <h1>A history of everything you copy</h1>
+      <svg  class="rotate" width="125" height="125" xmlns="http://www.w3.org/2000/svg"><g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd"><circle cx="62.5" cy="62.5" r="57.5"/><path d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0" stroke-linecap="round"/></g></svg>
+      <h1 class="animate">A history of everything you copy</h1>
       </header>
   <main>
 
       <div class="heading">
     
-      <p class="description">
+      <p class="description scale">
         Clipboard allows you to track and organize everything you 
   copy. Instantly access your clipboard on all your devices.
       </p>
